disable hover highlight for link on mobile device, it's kind of buggy

--- a/src/PostView.scss
+++ b/src/PostView.scss
@@ -30,9 +30,13 @@
     outline: 0
 }
 .md a:active,
-.md a:focus,
-.md a:hover {
+.md a:focus {
     color: $c-highlight;
+}
+@media (any-hover: hover) {
+  .md a:hover {
+    color: $c-highlight;
+  }
 }
 .md strong {
     font-weight: 700
