--- a/src/index.scss
+++ b/src/index.scss
@@ -27,8 +27,10 @@ h2, h3, h4, h4, h6 {
 
 a {
   color: $c-text;
+}
 
-  &:hover {
+@media (any-hover: hover) {
+  a:hover {
     color: $c-highlight;
   }
 }
